Alarm Settings und Shelly+ Auth

--- a/config.ini
+++ b/config.ini
@@ -147,6 +147,9 @@ Name= Shelly 1PM
 ## Documentation https://shelly-api-docs.shelly.cloud/gen2/ComponentsAndServices/EM#status
 ##
 ## Username/Password leave empty if no authentication is required
+Username = 
+Password = 
+DigestAuth = True
 Host=172.16.1.1
 CUST_SN = 12345678
 CUST_API_PATH= rpc/Switch.GetStatus?id=0
