Make servicename configurable (eg. for com.victronenergy.acload) (#53)
* added support for genset/grid/acloads for template
* read from config.ini
* Shelly & type modified
* support for ShellyPlus Auth
* support to read type for acload/pvinverter from config.ini
* code clean
* refactor config reading
---------
Co-authored-by: Dirk Steinkopf <dirk@steinkopf.net>

--- a/config.ini
+++ b/config.ini
@@ -120,6 +120,7 @@ Phase=L1
 DeviceInstance=47
 AcPosition=1
 Name= Tasmota
+Servicename=com.victronenergy.grid
 
 [TEMPLATE1]
 ## Shelly Gen 1 authenticated and unathenticated example
@@ -143,6 +144,7 @@ Phase=L2
 DeviceInstance=45
 AcPosition=1
 Name= Shelly 1PM
+Servicename=com.victronenergy.genset
 
 [TEMPLATE2]
 ## Shelly Gen 2 - Only works unauthenticated!
@@ -163,3 +165,4 @@ Phase=L3
 DeviceInstance=46
 AcPosition=1
 Name= ShellyPlus1PM
+Servicename=com.victronenergy.pvinverter
