--- a/config.ini
+++ b/config.ini
@@ -105,7 +105,8 @@ AcPosition=1
 ##
 ## Username/Password leave empty if no authentication is required
 Username = 
-Password = 
+Password =
+DigestAuth = False
 Host=172.16.1.1
 CUST_SN = 12345678
 CUST_API_PATH= cm?cmnd=STATUS+8
@@ -128,7 +129,8 @@ Servicename=com.victronenergy.grid
 ##
 ## Username/Password leave empty if no authentication is required
 Username = 
-Password = 
+Password =
+DigestAuth = False
 Host=172.16.1.1
 CUST_SN = 12345678
 CUST_API_PATH= status
@@ -147,11 +149,14 @@ Name= Shelly 1PM
 Servicename=com.victronenergy.genset
 
 [TEMPLATE2]
-## Shelly Gen 2 - Only works unauthenticated!
+## Shelly Gen 2 - Only works with Digest Auth = True and Username and Password!
 ## Documentation https://shelly-api-docs.shelly.cloud/gen2/ComponentsAndServices/EM#status
 ##
 ## Username/Password leave empty if no authentication is required
+Username = 
+Password =
 Host=172.16.1.1
+DigestAuth = True
 CUST_SN = 12345678
 CUST_API_PATH= rpc/Switch.GetStatus?id=0
 CUST_POLLING = 2000
