--- a/config.ini
+++ b/config.ini
@@ -41,7 +41,7 @@ Password =
 Phase=L1
 DeviceInstance=34
 AcPosition=1
-Servicename=com.victronenergy.charger
+#Servicename=com.victronenergy.charger
 
 # 2nd inverter
 [INVERTER1]
